voting1- Habeeb/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\holuy\Downloads\voting1- Habeeb
-d
C:\Users\holuy\Downloads\voting1- Habeeb\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\holuy\Downloads\voting1- Habeeb\VoteCounter.java
<---- end of javadoc command ---->
Loading source file C:\Users\holuy\Downloads\voting1- Habeeb\VoteCounter.java...
C:\Users\holuy\Downloads\voting1- Habeeb\VoteCounter.java:37: error: invalid method declaration; return type required
public VoteCounter( )
       ^
C:\Users\holuy\Downloads\voting1- Habeeb\VoteCounter.java:65: error: reached end of file while parsing
}
 ^
2 errors
